# fast-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  tips.txt
.github/workflows/: cicd.yml
infrastructure/: cf.yml
migrations/: alembic.ini
migrations/alembic/: env.py
src/: app.py  main.py  setup.py  test.py
src/config/: settings.py
src/database/: manager.py  orms.py  setup.py
src/models/: app_user_model.py  user_model.py
src/repos/: app_user_repo.py  user_repo.py
src/routers/: app_user_router.py  user_router.py
src/services/: app_user_service.py  user_service.py
tests/: pytest.ini  test_demo.py  test_real.py
tests/integration/: conftest.py  test_int_v1_user.py  test_v1_app_users.py
tests/unit/: conftest.py  test_unit_v1_user.py
