[tool.poetry]
package-mode = false
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
